@@ -22,7 +22,7 @@
 ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = src testsuite
 
-EXTRA_DIST = Changelog PACKAGING TODO DONE
+EXTRA_DIST = ChangeLog PACKAGING TODO DONE
 
 MAINTAINERCLEANFILES = ChangeLog
 CLEANFILES = *~ *.bak
